--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,13 @@ highlighter: pygments
 # Permalinks
 permalink: pretty
 
+#Navigator 
+navigation:
+ - title: Home
+   url: /
+ - title: About
+   url: /about
+   
 author:
   name: 'UnblockMedium'
   url: https://twitter.com/hashtag/UnblockMedium
