--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ permalink: pretty
 navigation:
  - title: Home
    url: /
- - title: About
-   url: /about
+ - title: DNS List
+   url: /dns/
    
 author:
   name: 'UnblockMedium'
