--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ enforce_ssl: 'unblockmedium.com'
 
 paginate: 1
 markdown: Kramdown
-highlighter: pygments
+highlighter: rouge
 
 # Permalinks
 permalink: pretty
