--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Custom Jekyll Setting
 title: UnblockMedium
 tagline: 'A Daily Report'
-description: 'A Daily Report on Medium Malaysia Censorship'
+description: 'A Daily Report on the block of Medium.com in Malaysia. Say no to Internet Censorship.'
 email: unblockmedium@gmail.com
 baseurl: ""
 url: 'https://unblockmedium.com'
